@@ -17,6 +17,7 @@ import org.anjocaido.groupmanager.utils.PermissionCheckResult;
 import org.anjocaido.groupmanager.utils.PermissionCheckResult.Type;
 import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
+import org.bukkit.permissions.Permission;
 
 /**
  * Everything here maintains the model created by Nijikokun
@@ -62,7 +63,7 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 	 */
 	@Override
 	public boolean permission(Player player, String permission) {
-		return checkUserPermission(ph.getUser(player.getName()), permission);
+		return checkUserPermission(ph.getUser(player.getName()).updatePlayer(player), permission);
 	}
 
 	/**
@@ -98,13 +99,13 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 	public List<String> getAllPlayersPermissions(String userName) {
 
 		List<String> playerPermArray = new ArrayList<String>();
-		
+
 		for (String perm : ph.getUser(userName).getPermissionList()) {
 			if ((!playerPermArray.contains(perm)) && (!playerPermArray.contains("-" + perm))) {
 				playerPermArray.add(perm);
-				
+
 				Map<String, Boolean> children = GroupManager.BukkitPermissions.getAllChildren(perm, playerPermArray);
-				
+
 				if (children != null) {
 					for (String child : children.keySet()) {
 						if (children.get(child))
@@ -135,7 +136,7 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 				for (String perm : ph.getGroup(group).getPermissionList()) {
 					if ((!playerPermArray.contains(perm)) && (!playerPermArray.contains("-" + perm))) {
 						playerPermArray.add(perm);
-						
+
 						Map<String, Boolean> children = GroupManager.BukkitPermissions.getAllChildren(perm, playerPermArray);
 						if (children != null) {
 							for (String child : children.keySet()) {
@@ -149,7 +150,8 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 				}
 			}
 		}
-		//Collections.sort(playerPermArray, StringPermissionComparator.getInstance());
+		// Collections.sort(playerPermArray,
+		// StringPermissionComparator.getInstance());
 
 		return playerPermArray;
 	}
@@ -243,7 +245,8 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 	/**
 	 * Check if user can build. Checks inheritance and subgroups.
 	 * 
-	 * @param userName Player's name    
+	 * @param userName
+	 *            Player's name
 	 * @return true if the user can build
 	 */
 	public boolean canUserBuild(String userName) {
@@ -283,8 +286,8 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 	}
 
 	/**
-	 * Checks the specified group for the Info Build node.
-	 * Does NOT check inheritance
+	 * Checks the specified group for the Info Build node. Does NOT check
+	 * inheritance
 	 * 
 	 * @param groupName
 	 * @return true if can build
@@ -615,15 +618,8 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 		result.askedPermission = permission;
 		result.owner = user;
 		for (String access : user.getPermissionList()) {
-			if (comparePermissionString(access, permission)) {
-				result.accessLevel = access;
-				if (access.charAt(0) == '-') {
-					result.resultType = PermissionCheckResult.Type.NEGATION;
-				} else if (access.charAt(0) == '+') {
-					result.resultType = PermissionCheckResult.Type.EXCEPTION;
-				} else {
-					result.resultType = PermissionCheckResult.Type.FOUND;
-				}
+			result.resultType = comparePermissionString(access, permission);
+			if (result.resultType != PermissionCheckResult.Type.NOTFOUND) {
 				return result;
 			}
 		}
@@ -645,15 +641,8 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 		result.owner = group;
 		result.askedPermission = permission;
 		for (String access : group.getPermissionList()) {
-			if (comparePermissionString(access, permission)) {
-				result.accessLevel = access;
-				if (access.charAt(0) == '-') {
-					result.resultType = PermissionCheckResult.Type.NEGATION;
-				} else if (access.charAt(0) == '+') {
-					result.resultType = PermissionCheckResult.Type.EXCEPTION;
-				} else {
-					result.resultType = PermissionCheckResult.Type.FOUND;
-				}
+			result.resultType = comparePermissionString(access, permission);
+			if (result.resultType != PermissionCheckResult.Type.NOTFOUND) {
 				return result;
 			}
 		}
@@ -670,7 +659,7 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 	 */
 	public boolean checkUserPermission(User user, String permission) {
 		PermissionCheckResult result = checkFullGMPermission(user, permission, true);
-		if (result.resultType.equals(PermissionCheckResult.Type.EXCEPTION) || result.resultType.equals(PermissionCheckResult.Type.FOUND)) {
+		if (result.resultType == PermissionCheckResult.Type.EXCEPTION || result.resultType == PermissionCheckResult.Type.FOUND) {
 			return true;
 		}
 
@@ -686,13 +675,13 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 	 * @return PermissionCheckResult
 	 */
 	public PermissionCheckResult checkFullUserPermission(User user, String targetPermission) {
-		
+
 		return checkFullGMPermission(user, targetPermission, true);
 	}
-	
+
 	/**
-	 * Check user and groups with inheritance and Bukkit if bukkit = true
-	 * return a PermissionCheckResult.
+	 * Check user and groups with inheritance and Bukkit if bukkit = true return
+	 * a PermissionCheckResult.
 	 * 
 	 * @param user
 	 * @param targetPermission
@@ -708,31 +697,33 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 			return result;
 		}
 
-		if (checkBukkit == true) {
-			// Check Bukkit perms to support plugins which add perms via code (Heroes).
-			final Player player = Bukkit.getPlayer(user.getName());
-			if ((player != null) && (player.hasPermission(targetPermission))) {
-				result.resultType = PermissionCheckResult.Type.FOUND;
+		if (checkBukkit) {
+			// Check Bukkit perms to support plugins which add perms via code
+			// (Heroes).
+			final Player player = user.getBukkitPlayer();
+			final Permission bukkitPerm = Bukkit.getPluginManager().getPermission(targetPermission);
+			if (player != null && bukkitPerm != null) {
+				result.resultType = player.hasPermission(bukkitPerm) ? PermissionCheckResult.Type.FOUND : PermissionCheckResult.Type.NEGATION;
 				result.owner = user;
 				return result;
 			}
 		}
-		
+
 		PermissionCheckResult resultUser = checkUserOnlyPermission(user, targetPermission);
-		if (!resultUser.resultType.equals(PermissionCheckResult.Type.NOTFOUND)) {
+		if (resultUser.resultType != PermissionCheckResult.Type.NOTFOUND) {
 			return resultUser;
 		}
 
 		// IT ONLY CHECKS GROUPS PERMISSIONS IF RESULT FOR USER IS NOT FOUND
 		PermissionCheckResult resultGroup = checkGroupPermissionWithInheritance(user.getGroup(), targetPermission);
-		if (!resultGroup.resultType.equals(PermissionCheckResult.Type.NOTFOUND)) {
+		if (resultGroup.resultType != PermissionCheckResult.Type.NOTFOUND) {
 			return resultGroup;
 		}
 
 		// SUBGROUPS CHECK
 		for (Group subGroup : user.subGroupListCopy()) {
 			PermissionCheckResult resultSubGroup = checkGroupPermissionWithInheritance(subGroup, targetPermission);
-			if (!resultSubGroup.resultType.equals(PermissionCheckResult.Type.NOTFOUND)) {
+			if (resultSubGroup.resultType != PermissionCheckResult.Type.NOTFOUND) {
 				return resultSubGroup;
 			}
 		}
@@ -994,37 +985,42 @@ public class AnjoPermissionsHandler extends PermissionsReaderInterface {
 	 * 
 	 * @param userAccessLevel
 	 * @param fullPermissionName
-	 * @return true if found a matching token. false if not.
+	 * @return PermissionCheckResult.Type
 	 */
-	public boolean comparePermissionString(String userAccessLevel, String fullPermissionName) {
-        int userAccessLevelLength;
-        if (userAccessLevel == null || fullPermissionName == null
-                || fullPermissionName.length() == 0 || (userAccessLevelLength = userAccessLevel.length()) == 0) {
-            return false;
-        }
+	public PermissionCheckResult.Type comparePermissionString(String userAccessLevel, String fullPermissionName) {
+		int userAccessLevelLength;
+		if (userAccessLevel == null || fullPermissionName == null || fullPermissionName.length() == 0 || (userAccessLevelLength = userAccessLevel.length()) == 0) {
+			return PermissionCheckResult.Type.NOTFOUND;
+		}
 
-        int userAccessLevelOffset = 0;
-        if (userAccessLevel.charAt(0) == '+' || userAccessLevel.charAt(0) == '-') {
-            userAccessLevelOffset = 1;
-        }
-        if ("*".regionMatches(0, userAccessLevel, userAccessLevelOffset, userAccessLevelLength - userAccessLevelOffset)) {
-            return true;
-        }
-        int fullPermissionNameOffset;
-        if (fullPermissionName.charAt(0) == '+' || fullPermissionName.charAt(0) == '-') {
-            fullPermissionNameOffset = 1;
-        } else {
-            fullPermissionNameOffset = 0;
-        }
+		PermissionCheckResult.Type result = PermissionCheckResult.Type.FOUND;
+		int userAccessLevelOffset = 0;
+		if (userAccessLevel.charAt(0) == '+') {
+			userAccessLevelOffset = 1;
+			result = PermissionCheckResult.Type.EXCEPTION;
+		} else if (userAccessLevel.charAt(0) == '-') {
+			userAccessLevelOffset = 1;
+			result = PermissionCheckResult.Type.NEGATION;
+		}
+		if ("*".regionMatches(0, userAccessLevel, userAccessLevelOffset, userAccessLevelLength - userAccessLevelOffset)) {
+			return result;
+		}
+		int fullPermissionNameOffset;
+		if (fullPermissionName.charAt(0) == '+' || fullPermissionName.charAt(0) == '-') {
+			fullPermissionNameOffset = 1;
+		} else {
+			fullPermissionNameOffset = 0;
+		}
 
-        if (userAccessLevel.charAt(userAccessLevel.length() - 1) == '*') {
-        	return userAccessLevel.regionMatches(true, userAccessLevelOffset, fullPermissionName, fullPermissionNameOffset, userAccessLevelLength - userAccessLevelOffset - 1);
-        } else {
-            return userAccessLevel.regionMatches(true, userAccessLevelOffset, fullPermissionName, fullPermissionNameOffset, 
-                     Math.max(userAccessLevelLength - userAccessLevelOffset, fullPermissionName.length() - fullPermissionNameOffset));
-         }
-    }
-
+		if (userAccessLevel.charAt(userAccessLevel.length() - 1) == '*') {
+			return userAccessLevel.regionMatches(true, userAccessLevelOffset, fullPermissionName, fullPermissionNameOffset, userAccessLevelLength - userAccessLevelOffset - 1) ?
+					result : PermissionCheckResult.Type.NOTFOUND;
+		} else {
+			return userAccessLevel.regionMatches(true, userAccessLevelOffset, fullPermissionName, fullPermissionNameOffset,
+					Math.max(userAccessLevelLength - userAccessLevelOffset, fullPermissionName.length() - fullPermissionNameOffset)) ?
+							result : PermissionCheckResult.Type.NOTFOUND;
+		}
+	}
 
 	/**
 	 * Returns a list of all groups.
